# template-haskell-example

./: CHANGELOG.md  template-haskell-example.cabal
app/: FilterByClass.hs  FilterByTH.hs  FilterByTypes.hs  Main.hs  THExample.hs  Types.hs
